// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Compiler > should compile all test fixtures 1`] = `
{
  "mainFlow": {
    "edges": [
      {
        "source": "fetchUser_1",
        "target": "subFlow_1",
      },
      {
        "source": "subFlow_1",
        "target": "processOrders_1",
      },
    ],
    "id": "mainFlow",
    "nodes": [
      {
        "id": "fetchUser_1",
        "uses": "fetchUser",
      },
      {
        "id": "subFlow_1",
        "params": {
          "blueprintId": "subFlow",
        },
        "uses": "subflow",
      },
      {
        "id": "processOrders_1",
        "uses": "processOrders",
      },
    ],
  },
  "simpleFlow": {
    "edges": [
      {
        "source": "fetchUser_1",
        "target": "processOrders_1",
      },
    ],
    "id": "simpleFlow",
    "nodes": [
      {
        "id": "fetchUser_1",
        "uses": "fetchUser",
      },
      {
        "id": "processOrders_1",
        "uses": "processOrders",
      },
    ],
  },
  "subFlow": {
    "edges": [],
    "id": "subFlow",
    "nodes": [
      {
        "id": "recordTransaction_1",
        "uses": "recordTransaction",
      },
    ],
  },
}
`;

exports[`Compiler > should compile all test fixtures 2`] = `
{
  "fetchUser": {
    "exportName": "fetchUser",
    "importPath": "/home/g/m/flowcraft/packages/compiler/__tests__/fixtures/simple-flow.ts",
  },
  "processOrders": {
    "exportName": "processOrders",
    "importPath": "/home/g/m/flowcraft/packages/compiler/__tests__/fixtures/simple-flow.ts",
  },
  "recordTransaction": {
    "exportName": "recordTransaction",
    "importPath": "/home/g/m/flowcraft/packages/compiler/__tests__/fixtures/steps.ts",
  },
}
`;

exports[`Compiler > should compile all test fixtures 3`] = `
"// Generated by @flowcraft/compiler
import { recordTransaction } from '../__tests__/fixtures/steps'
import { fetchUser } from '../__tests__/fixtures/simple-flow'
import { processOrders } from '../__tests__/fixtures/simple-flow'

import type { NodeImplementation, WorkflowBlueprint } from 'flowcraft'

export const registry: Record<string, NodeImplementation> = {
  'recordTransaction': recordTransaction,
  'fetchUser': fetchUser,
  'processOrders': processOrders
}

export const blueprints: Record<string, WorkflowBlueprint> = {
  'subFlow': {
  "id": "subFlow",
  "nodes": [
    {
      "id": "recordTransaction_1",
      "uses": "recordTransaction"
    }
  ],
  "edges": []
},
  'mainFlow': {
  "id": "mainFlow",
  "nodes": [
    {
      "id": "fetchUser_1",
      "uses": "fetchUser"
    },
    {
      "id": "subFlow_1",
      "uses": "subflow",
      "params": {
        "blueprintId": "subFlow"
      }
    },
    {
      "id": "processOrders_1",
      "uses": "processOrders"
    }
  ],
  "edges": [
    {
      "source": "fetchUser_1",
      "target": "subFlow_1"
    },
    {
      "source": "subFlow_1",
      "target": "processOrders_1"
    }
  ]
},
  'simpleFlow': {
  "id": "simpleFlow",
  "nodes": [
    {
      "id": "fetchUser_1",
      "uses": "fetchUser"
    },
    {
      "id": "processOrders_1",
      "uses": "processOrders"
    }
  ],
  "edges": [
    {
      "source": "fetchUser_1",
      "target": "processOrders_1"
    }
  ]
}
}
"
`;

exports[`Compiler > should compile fixture with subflow 1`] = `
{
  "mainFlow": {
    "edges": [],
    "id": "mainFlow",
    "nodes": [
      {
        "id": "start",
        "uses": "start",
      },
    ],
  },
  "simpleFlow": {
    "edges": [
      {
        "source": "fetchUser_1",
        "target": "processOrders_1",
      },
    ],
    "id": "simpleFlow",
    "nodes": [
      {
        "id": "fetchUser_1",
        "uses": "fetchUser",
      },
      {
        "id": "processOrders_1",
        "uses": "processOrders",
      },
    ],
  },
  "subFlow": {
    "edges": [],
    "id": "subFlow",
    "nodes": [
      {
        "id": "start",
        "uses": "start",
      },
    ],
  },
}
`;

exports[`Compiler > should compile fixture with subflow 2`] = `
{
  "fetchUser": {
    "exportName": "fetchUser",
    "importPath": "/home/g/m/flowcraft/packages/compiler/__tests__/fixtures/simple-flow.ts",
  },
  "processOrders": {
    "exportName": "processOrders",
    "importPath": "/home/g/m/flowcraft/packages/compiler/__tests__/fixtures/simple-flow.ts",
  },
}
`;

exports[`Compiler > should compile fixture with subflow 3`] = `
"// Generated by @flowcraft/compiler
import { fetchUser } from '__tests__/fixtures/simple-flow.ts'
import { processOrders } from '__tests__/fixtures/simple-flow.ts'

import type { NodeImplementation, WorkflowBlueprint } from 'flowcraft'

export const registry: Record<string, NodeImplementation> = {
  'fetchUser': fetchUser,
  'processOrders': processOrders
}

export const blueprints: Record<string, WorkflowBlueprint> = {
  'subFlow': {
  "id": "subFlow",
  "nodes": [
    {
      "id": "start",
      "uses": "start"
    }
  ],
  "edges": []
},
  'mainFlow': {
  "id": "mainFlow",
  "nodes": [
    {
      "id": "start",
      "uses": "start"
    }
  ],
  "edges": []
},
  'simpleFlow': {
  "id": "simpleFlow",
  "nodes": [
    {
      "id": "fetchUser_1",
      "uses": "fetchUser"
    },
    {
      "id": "processOrders_1",
      "uses": "processOrders"
    }
  ],
  "edges": [
    {
      "source": "fetchUser_1",
      "target": "processOrders_1"
    }
  ]
}
}
"
`;
